fix: content wrap, with padding

--- a/src/components/Main/index.module.css
+++ b/src/components/Main/index.module.css
@@ -84,3 +84,12 @@
 		padding: 0 3rem;
 	}
 }
+
+@media(min-width: 1500px) {
+	.ctas {
+		padding: 0 25rem;
+	}
+	.descriptions {
+		padding: 0 40rem;
+	}
+}
